Fix z-index of dropdown-menu

--- a/app/javascript/pawoo/styles/extensions/mastodon/components.scss
+++ b/app/javascript/pawoo/styles/extensions/mastodon/components.scss
@@ -64,3 +64,7 @@
     width: 32px;
   }
 }
+
+.dropdown-menu {
+  z-index: 2; // .column-headerのz-indexで隠れてしまう
+}
